# ChangeLog for app-arch/dpkg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.304 2014/12/28 08:14:37 jer Exp $

*dpkg-1.17.23 (28 Dec 2014)

  28 Dec 2014; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.23.ebuild:
  Version bump.

  06 Dec 2014; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.10.ebuild,
  metadata.xml:
  Old.

  06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for ia64, wrt bug #530958

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for ppc64, wrt bug #530958

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for ppc, wrt bug #530958

  02 Dec 2014; Markus Meier <maekke@gentoo.org> dpkg-1.17.22.ebuild:
  arm stable, bug #530958

  02 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for alpha, wrt bug #530958

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for sparc, wrt bug #530958

  29 Nov 2014; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for HPPA (bug #530958).

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for x86, wrt bug #530958

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.22.ebuild:
  Stable for amd64, wrt bug #530958

*dpkg-1.17.22 (28 Nov 2014)

  28 Nov 2014; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.19.ebuild,
  -dpkg-1.17.20.ebuild, -dpkg-1.17.21.ebuild, +dpkg-1.17.22.ebuild:
  Version bump (bug #530958).

*dpkg-1.17.21 (25 Oct 2014)

  25 Oct 2014; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.21.ebuild:
  Version bump.

*dpkg-1.17.20 (23 Oct 2014)

  23 Oct 2014; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.20.ebuild:
  Version bump.

*dpkg-1.17.19 (20 Oct 2014)

  20 Oct 2014; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.16.ebuild,
  -dpkg-1.17.18.ebuild, +dpkg-1.17.19.ebuild:
  Version bump.

*dpkg-1.17.18 (13 Oct 2014)
