@@ -6,13 +6,13 @@ AUX dpkg-1.17.1-flags.patch 300 SHA256 b0be51022f576bc0867570192ce5871a0da4ca2a6
 DIST dpkg_1.17.22.tar.xz 4361648 SHA256 389b2b2fdb6c8946a4cff737c6921e707074cfee249b3803202e3c8e1360c5f3 SHA512 cc4a606ee2581aa922e543b15f848cae9d3b082337165ca16a9038f2a17f50a0dbf4c8376a1e46d30bae628cea8e866b6d023e94a3ff5b2936945b91b0405a47 WHIRLPOOL 5e2753d10e87f7018058e12d18242d275978b3892a654d76b0745d2c2a2b1bea015e70c1c45df548a7b08e2d13f3f06549af7560fcd6e127bcb77ac54f5b3956
 DIST dpkg_1.17.23.tar.xz 4386124 SHA256 90c4af92fc248a7542cf6db1141d69b042130abd82781943b3c2608e78f860b5 SHA512 b0ebb6d072135f8eb0504084aab38d1f7366dd2bbf4a28a66f7fda5777236f56eb14dd43f8b5cd5ab8dd5d467e48b398221a271c2cb52360d09c7b7cec0e531a WHIRLPOOL cda6fab0c05e12a077a1c7c66883c85646b9f45ece209925947583a4f452f54750253249e21c2b650c13e57c4bfbb82caf807ab00a9163dd1db4bc289c874a04
 EBUILD dpkg-1.17.22.ebuild 2153 SHA256 3c7d43c726c2560ce8bbc2632fa232cfcbbf1660c19ea9c6884c7cf10401bdd5 SHA512 cda91e06fa752a5d46db04538582f352762a70c15b62f7b21e9413d4a6939ada898a2cae84ab0b5544a9b214da78f32e93d7cc9f5e3ffb8f8a0a5ce09be590b1 WHIRLPOOL 3adab53c402330fe9ea097734e36587105ab59568c5a7eacd3ac56248626f487dfc62c7d70935421ef2771f18dcba64fb54a303ae804ab27fb82526f1be112ca
-EBUILD dpkg-1.17.23.ebuild 2161 SHA256 d7bc6cba0c15969d41a567623f3e2d5498be2a17c6a72a01e74edc38013f6250 SHA512 c3d520ccd9a3592d8e39f27bcecda8fa0d20e65652561787847fd15a4761964c5ffc8380bc1ec512416792359f82202f45f23f7409942237ac0c17e66b941a8c WHIRLPOOL 2a6c24dad1699b12471caf1e43b6ad2f50158a554b23c10498c742e7b4fb140d3b35c9a608ad807d9a99e7e0bb546a75cd83c888a7dfc4877c879c408c6d0ffd
-MISC ChangeLog 38947 SHA256 60a658decc6283645ee5e8ee3c3e713e0f7d7c40eacda53016a578f2bd115094 SHA512 da8a3f62f019ec873bfeeb8bf68e90d8a44917899a491b640fc2819b5a19b8ffa1e4f986c19b47df2a7787774ddcf1cdb33d690e5ff531c76aa8fbe71013c0d7 WHIRLPOOL 015a8ef8c8101f55bfaa6b7fc5f5485d3b4342119d3c5d16ed0132e162e6a80afdffc06766683a4bb22437bb03582599e276a6d07b0819775253c210a9d7c1b6
+EBUILD dpkg-1.17.23.ebuild 2162 SHA256 c03a7ae146f13d1f272d0a793403beaaa793c62fbd2db4a9ba7f2f6ea6dfa776 SHA512 b7cb1c1ce767f09c7fe14258542985a21397ae6ec2875925b1c880e7430a17b57ad1b82a2d2a5d88cd313b67265a65f5302cca7f239c8da82d37e8ee17a46c47 WHIRLPOOL 8e6d481dd949c97f24c7ef8d759347b93e0939ac71fddf9252cad602b1d66c733b7d735c8ef7fc791c376ff675cb0f816675a2cede73468f97b4247e7b784365
+MISC ChangeLog 39162 SHA256 fce174c7737ab6eb7ba979c8218dec4f4d6126506ec4689ce5a1c1cff13a232c SHA512 dfab6fddb7e60d6b79c4db59e6a7e39147edadd0f0712e5d5c7380dc7af7caad859ff7eed5ab0cee3f6b0b91d139f4b0d155396a5057e4bb9d4d69475ca50ed7 WHIRLPOOL 31fa37d8d93cae10bcacabfd244e9ecb80d1dfe1ff5491c88514f8e79a91a002d1f4d2121f11dff027e9de8da2715133a65165ba842585859c9c3753cbecfffe
 MISC metadata.xml 243 SHA256 43ad915474628453e4f0257b8184ae2628113c0a8519b3a3e038e885c3aec7e3 SHA512 1153fdbd05486ee938a17e51c2f5aade083c05beff04ada67acccf12b4e1bfc04ac662c921452076b81626f0cfc873518b23b69f003d8df8e3d9f3952828da2e WHIRLPOOL f2b1ce108d5c9f22c81fca2079d928cbadb37350f8aeadce236ad273f86892e01346b6b6928eea67af5a3d960ab6b7e42b02c74e97441e9a6bd89cd0c8f340f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSfu+4ACgkQVWmRsqeSphNSeACdG3FwIAlfC+WcKltkijrddSDF
-TCkAn3U/UbQz1hvWbJ72GDrGUcnFlWHU
-=QIe5
+iEYEAREIAAYFAlTeaZYACgkQVWmRsqeSphP1GACeI3VNogC9gWD4/EfR2saXfkGt
+Mj0AoIEivH7eEbrqHXDLqLKE1Uj5Vxel
+=HtJU
 -----END PGP SIGNATURE-----
