@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/debhelper-9.20150101.ebuild,v 1.1 2015/01/04 10:49:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/debhelper-9.20150101.ebuild,v 1.3 2015/02/13 21:13:03 jer Exp $
 
 EAPI=5
 inherit eutils toolchain-funcs
@@ -11,7 +11,7 @@ SRC_URI="mirror://debian/pool/main/d/${PN}/${P/-/_}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux"
+KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux"
 IUSE="test"
 DH_LINGUAS=( de es fr )
 IUSE+=" ${DH_LINGUAS[@]/#/linguas_}"
@@ -21,7 +21,7 @@ NLS_DEPEND=$(
 )
 
 RDEPEND="
-	>=dev-lang/perl-5.10
+	>=dev-lang/perl-5.10:=
 	>=app-arch/dpkg-1.17
 	dev-perl/TimeDate
 	virtual/perl-Getopt-Long
