@@ -9,13 +9,13 @@ DIST devices.tar.gz 47835 SHA256 0d93f93c8b21160069d14e74f8f990a2e0e1e5a90dc828b
 EBUILD debootstrap-1.0.56.ebuild 1029 SHA256 8bd9f64d3f8a2b90777f155dc683e3f098ecc9aa9dbee2d30f3e67ba7fca6111 SHA512 40f750a10641440430ab98c6b9823d9c2f3a0bb75cf3e825e00bdef1feda5a99c71d02fd169952333a78d8ca060a2ba609f94fd77a640cd18d2c986f004af23a WHIRLPOOL bc54abce7e5a6088bf22a9fb4a3f0a578f3236afca2fe2910bb2e34fdc33db6d918e9a00f341095ea5907b3bea403beb5b9fe37669e7166f6c7aeea5194a6243
 EBUILD debootstrap-1.0.59.ebuild 1059 SHA256 6419e64dfc00211177755c626ed3e98202327fc666824099e9f7eae46ba6752e SHA512 2237e4918b930d290f418832c44b4183934332fe747bf291ac9721cf1807f38710e646048b528dee03d1291771f8bfac439ef623d3bd020554897e7429c572cc WHIRLPOOL 0edabf67c149504a491bff161019241c28a98ff1ef5c96d8bbf2829062efb59c3656952d18a094a098c54129e7717a4a315598cc883e4d040a82d11a10f002c3
 EBUILD debootstrap-1.0.66.ebuild 1029 SHA256 234c791d417b3e3e7e2c119efcb2f57d478c906f5897615cd716c17bc41393ad SHA512 2c6a8539570ea8e6c4026579df0a1db0a68ead58ae39998a9ef80742b2f5f2ed8fc6e8d091abdaaf2c65c2cd1aa08cb76df4f96502b53253c7b715ecb58a1d91 WHIRLPOOL 4f8cab06087e4018344f2b9e1ff298fdb3a6b3a7e1c081080588e4e5c23d6b743df6ea8de4eb93af9fd4d402816a64a706268cc37fad5c2e00b1f73780c1a5fa
-EBUILD debootstrap-1.0.67.ebuild 1029 SHA256 de1003d6d4b6d4a3f8194e09906d548f891ec0259b27b2685a653096de81d9dc SHA512 649e0e876fb27ce81f3208e806f938b054efe9668add2ecd424cb8bf433c6780d7ccab24d45da0f4de981a131da7266c61f48a1adfcf00a703f03b96d1dc1b74 WHIRLPOOL 3227e1d5a25e58993d19c6d24b9975a7b7d31d62f793c6eb7ae57fe4aaa28c28d474cdda0890a3b13529132c25a0638e8e950fcbba66143a31638de9cb84791d
-MISC ChangeLog 33952 SHA256 78b9f52b40e89a8019a75aab6f78c1cb81cf12a01daf5faec25e21d09c6ab93f SHA512 c6137397bfa7ea22aa4a966c552d4a685315b83d0166634e675497c1ce8723cd19676cbbc7e74cb48e2a44e5369031468b1d39368c788725c76d946b7434aa4f WHIRLPOOL 5f51c8396e09f70a24b2f78107c5bf597a79201e0c2949abd7f509de4bc92d361928e9e4064ac1a12e814a81dd2f05ad45c099de96af033a3426b4d7cf3588a3
+EBUILD debootstrap-1.0.67.ebuild 1028 SHA256 b7ccbaf2440a04159518e0c3a3e7b2b055a405bba63b289122565037fcd7ef3e SHA512 af1637e31f9c62ab610b0f9c982363f5d31c04fb1d1600bba38200e9813f7232d320e79ad578b870b164a4cfbc7b057fd7870a482d2e4cd3868bddd022c29d56 WHIRLPOOL ff1583d2c2c3a38e301cfacd76f394e5c820ac04a9985e1eef987cbc98dc70118d2252070917d6d7cc1c03188dfd678e14543de0294264f6c253f3bb494d1a89
+MISC ChangeLog 34060 SHA256 b3cda0113637bf3c67214c9d7d860c12603040f40baaced9eb5e865de66dc09c SHA512 73293991234a98da5be2eabb291d3c739ee27a3517b301840069568af99ac7d52b496b546278e4db1954a6febe1d0a81f7d3e2ddca83ec0d0245484a78d0a440 WHIRLPOOL bea04f28a6851d46d866013fde38984358308a4935759ebe00e3c821ab2c1b8841a87c5db6ede91bebb17e5219bf59a410fc79ad4accbbc635ab26faa2a3535d
 MISC metadata.xml 254 SHA256 2790aaa1752a64752fb0a90f28f292669aa359e1c1583ad3834746b55e86dbd2 SHA512 b8d3d7e0aaa35ea183b5b2978ed73ddaea52efe0f14ac2f45cbd64fd7d7a49383330ab3bf5f9777681df053584d5f392b6b6c22dbd778abfe39b8e0cc5915220 WHIRLPOOL 3403ae3dad61712af8ca7359fcb2124a509796fcc6a71d5a6c34cbc80ddcbdde48eddc03bbc559250b9bb818d2464b36143d17d98f21c6eacec34b6bda1ba048
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS4FDEACgkQVWmRsqeSphPupACeOTihLTkBDcTVR4lPtk5yp4sJ
-jMEAn2tSrBgdViG+kxbA513MzNM559Bp
-=PFoK
+iEYEAREIAAYFAlTeamEACgkQVWmRsqeSphPQJwCdFcEH8/ugmte+gk7IDNkOE2t/
+92sAnjEqTyHYZwpdV3trnpH3CvmtrMc7
+=GVcr
 -----END PGP SIGNATURE-----
