@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install
-DEPEND=>=dev-lang/perl-5.10 >=app-arch/dpkg-1.17 dev-perl/TimeDate virtual/perl-Getopt-Long linguas_de? ( >=app-text/po4a-0.24 ) linguas_es? ( >=app-text/po4a-0.24 ) linguas_fr? ( >=app-text/po4a-0.24 ) test? ( dev-perl/Test-Pod )
+DEPEND=>=dev-lang/perl-5.10:= >=app-arch/dpkg-1.17 dev-perl/TimeDate virtual/perl-Getopt-Long linguas_de? ( >=app-text/po4a-0.24 ) linguas_es? ( >=app-text/po4a-0.24 ) linguas_fr? ( >=app-text/po4a-0.24 ) test? ( dev-perl/Test-Pod )
 DESCRIPTION=Collection of programs that can be used to automate common tasks in debian/rules
 EAPI=5
 HOMEPAGE=http://packages.qa.debian.org/d/debhelper.html http://joeyh.name/code/debhelper/
 IUSE=test linguas_de linguas_es linguas_fr
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux
 LICENSE=GPL-2
-RDEPEND=>=dev-lang/perl-5.10 >=app-arch/dpkg-1.17 dev-perl/TimeDate virtual/perl-Getopt-Long
+RDEPEND=>=dev-lang/perl-5.10:= >=app-arch/dpkg-1.17 dev-perl/TimeDate virtual/perl-Getopt-Long
 SLOT=0
 SRC_URI=mirror://debian/pool/main/d/debhelper/debhelper_9.20150101.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=7ff771918950d44849ac69cbac7e30a6
+_md5_=b19601bb1e654bfebc03accf6a076b0f
