@@ -2,10 +2,10 @@ DEFINED_PHASES=compile install postinst unpack
 DESCRIPTION=Debian/Ubuntu bootstrap scripts
 EAPI=5
 HOMEPAGE=http://packages.qa.debian.org/d/debootstrap.html
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux
 LICENSE=MIT
 RDEPEND=app-arch/dpkg net-misc/wget sys-devel/binutils
 SLOT=0
 SRC_URI=mirror://debian/pool/main/d/debootstrap/debootstrap_1.0.67.tar.gz mirror://gentoo/devices.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=d862e460516bd90f0e9fb9ad73387a54
+_md5_=dac22ab8ebb96d183cb573430ca62a09
