@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/debootstrap
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.271 2015/01/15 19:25:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.272 2015/02/13 21:19:28 jer Exp $
+
+  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> debootstrap-1.0.67.ebuild:
+  Stable for HPPA (bug #539644).
 
 *debootstrap-1.0.67 (15 Jan 2015)
 
