@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/dpkg
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.304 2014/12/28 08:14:37 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.306 2015/02/13 21:16:05 jer Exp $
+
+  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.23.ebuild:
+  Stable for HPPA (bug #539648).
+
+  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.23.ebuild:
+  Set sub-SLOT dependency on dev-lang/perl.
 
 *dpkg-1.17.23 (28 Dec 2014)
 
